# deps

./: .gitignore
.github/workflows/: opencv.yml  torch.yml  torchvision.yml
opencv/: CMakeLists.txt
torchvision/: CMakeLists.txt  utils.cmake
